<resources>

    <string name="app_name">Venesuela</string>
    <string name="app_name_lists">Venesuela | Списки</string>
    <string name="app_name_base">Venesuela | База html</string>
    <string name="app_name_profile">Venesuela | Профиль</string>
    <string name="app_name_images">Venesuela | Картинки</string>
    <string name="app_name_text">Venesuela | Текст</string>
    <string name="app_name_links">Venesuela | Ссылки</string>
    <string name="app_name_tables">Venesuela | Таблицы</string>
    <string name="app_name_css">Venesuela | CSS</string>
    <string name="app_name_design">Venesuela | Дизайн</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войдите или зарегитсрируйтесь!</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">не действитльное имя пользователя</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_screen">Главное меню</string>
    <string name="title_home">Курсы</string>
    <string name="title_activity_css">CSS</string>
    <string name="title_activity_design">Дизайн</string>
    <string name="title_dashboard">Аккаунт</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title2">Здесь будут размещены уроки, проходи их каждый день
        и вскоре ты сможешь создавать сложные сайты!</string>

    <string name="registration">Проверь еще раз введный логин и пароль:</string>
    <string name="btn_reg1">Я исправил ошибку!</string>
    <string name="btn_reg2">Логин и пароль не соотвествуют</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">База html</string>
    <string name="tab_text_1">website</string>
    <string name="tab_text_2">style.css</string>
    <string name="tab_text_3">script.js</string>
    <string name="tab_text_4">web</string>
    <string name="base_txt1">Несмотря на то, что в интернете более миллиарда сайтов, они все также
        востребованы как 10, и даже 20 лет назад! Одним из самых популярных сайтов в мире - <b>Facebook</b>,
        в России - <b>Вконтакте</b>!</string>
    <string name="base_txt2">Настало время научиться делать сайты самому!</string>
    <string name="base_txt3">Так выглядит страничка в браузере:</string>
    <string name="base_txt3_1">Однако, как же она выглядит в html?</string>
    <string name="btn_prg_base3">Hello World!</string>
    <string name="base_txt5">Основной задачей, помимо написания кода, является поиск ошибок, найди здесь ошибку, если она есть:</string>
    <string name="txt_base4_2">Найди ошибку в коде, если она есть:</string>
    <string name="btn_ans1_base4_2_1">Для тега "body" нет закрывающего тега "/body" </string>
    <string name="btn_ans1_base4_2_2">Здесь нет ошибки</string>
    <string name="btn_ans1_base4_2_3">Тег "body" необходимо писать после тега "html"</string>
    <string name="btn_ans1_base4_2_4">Отсутсвует  символ ">"  после тега "/body"</string>
    <string name="txt_base4_3">В начало каждого сайта необходимо добавлять тег <b>!DOCTYPE html</b>.
        Если его не добавить, то сайт может не запуститься или контент в нем будет отображаться не правильно.
        Так должен выглядеть сайт с добавлением этого тега:
    </string>


    <string name="txt_base6">Поздравляю, теперь ты знаешь основу html!</string>
    <string name="title_activity_main_screen2">MainScreen2</string>
    <string name="title_activity_images">Картинки</string>
    <string name="txt_img1">В предыдщем уроке мы научились вставлять текст, настало время разнообразить наш контент,
        вставляя в него картинки!</string>
    <string name="txt_img2">Так будет выглядеть код с картинкой:</string>
    <string name="txt_img4">Попробуй добавить на свой сайт фотографию! </string>
    <string name="title_activity_text">Текст</string>
    <string name="title_activity_links">Ссылки</string>
    <string name="title_activity_code_editor">CodeEditor</string>
    <string name="title_activity_tables">Таблицы</string>
    <string name="title_activity_list">Списки</string>
    <string name="title_activity_comments">comments</string>
    <string name="title_activity_web_editor">web_editor</string>
    <string name="title_activity_buttons">buttons</string>

</resources>
